--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.6/dist/flowbite.min.css" />
 
-  <title>React App</title>
+  <title>Heavvy Metal</title>
 </head>
 
 <body>
